--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{%load static %}
 <!doctype html>
 <html lang="en">
 
@@ -7,11 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS -->
-
+  <link rel="shortcut icon" href="{% static 'Madrid/img/reallogo.ico' %}" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href="/static/style.css" rel="stylesheet">
-  <title>{% block title %} {% endblock title %}Club Atlético de Madrid Fans</title>
+  <title>{% block title %} {% endblock title %}Club Real Madrid Fans</title>
 
 </head>
 
@@ -19,7 +20,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Club Atlético de Madrid Fans</a>
+      <a class="navbar-brand" href="/">Club Real Madrid Fans</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,6 +32,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/aboutUs">About Us</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/history">History</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/news">News</a>
@@ -54,7 +58,7 @@
           Sign-up
         </button>
         {% else%}
-        <strong> <button type="button" class="btn btn-primary">Welcome {{ request.user }}! </button></strong>
+        <a href="lscab"><strong> <button type="button" class="btn btn-primary">Welcome {{ request.user }}! </button></strong></a>
         <a class="btn btn-success mx-2" href="/logout" role="button">Logout</a>
         {% endif %}
 
@@ -150,30 +154,15 @@
     </div>
   </div>
 
-  {% block body %}
-  {% endblock body %}
-  <!-- Optional JavaScript; choose one of the two! -->
-
-  <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
 
-  <!-- Option 2: Separate Popper and Bootstrap JS -->
-  <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
 
-  <footer id="contactDetails" class="panel-footer">
-
-    <hr>
-    <div style="background-color: darkslategray">
-      <div class="text-center">
-        <div id="foo1"> Made with &hearts; by Shrinjit Kr. Sharma </div>
-      </div>
-    </div>
-  </footer>
 </body>
 
 </html>
