--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,9 @@
-{% extends 'base.html' %}
-
+{% include 'base.html' %}
+{%load static%}
 {% block title %}
-Home | 
 {% endblock title %}
 
-{% block body %}
+{% block content %}
 <div class = "container-fluid my-0 px-0" >
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -14,21 +13,21 @@ Home |
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/static/atm1.jpg" class="d-block w-100" alt="...">
+        <img src="/static/Bellingham.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Welcome</h5>
           <!--<p>Some representative placeholder content for the first slide.</p>-->
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/static/wc1721993 (1).jpg" class="d-block w-100" alt="...">
+        <img src="/static/real_madrid.png" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Welcome</h5>
           <!--<p>Some representative placeholder content for the second slide.</p>-->
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/static/oblak.jpg" class="d-block w-100" alt="...">
+        <img src="/static/arda-guler.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Welcome</h5>
           <!--<p>Some representative placeholder content for the third slide.</p>-->
@@ -48,66 +47,104 @@ Home |
 
 
 <div class="container">
-<h2 class = "my-4 text-center">Jerseys</h2>
-
-  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="/static/atm_2020_home.jpg" class="d-block w-100" alt="...">
-
-        <div class="card-body">
-          <p class="card-text">Atletico De Madrid | Home Kit | 2019 - 2020</p>
-        </div>
+  <h2 class="my-4 text-center">Kits</h2>
+</div>
+<style>
+  .goold{
+    border: 2px solid #ffff00;
+    margin-top:20px;
+    list-style: none;
+</style>
+}
+</style>
+<div class="gold">
+  <div class="urus" style="text-align: center;">
+    {% for i in stan %}
+      <div style="display: inline-block; margin: 10px;">
+        {% if i.photo %}
+        <ul class="goold">
+          <li><img src="{{ i.photo.url }}" style="width: 32%;"></li>
+          <li><p>{{ i.title }}</p></li>
+          <li><p>{{ i.Price }}</p></li>
+          <li><button type="button" class="btn btn-sm btn-outline-danger" style="margin-top: 10px;">
+            <a href="/purchase_page" class="nav-link">Buy</a>
+          </button></li>
+          </ul>
+        {% endif %}
       </div>
-    </div>
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="/static/aaa.jpg" class="d-block w-100" alt="...">
-        
-        <div class="card-body">
-          <p class="card-text">Atletico De Madrid | Home Kit | 2020 - 2021</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="/static/rcamiseta10 (2).jpg" class="d-block w-100" alt="...">
-
-        <div class="card-body">
-          <p class="card-text">Atletico Madrid | Retro</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="/static/images (3) (1).jpg" class="d-block w-100" alt="...">
-
-        <div class="card-body">
-          <p class="card-text">Atletico Madrid | Goalkeeper's kit</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="/static/b.jpg" class="d-block w-100" alt="...">
-
-        <div class="card-body">
-          <p class="card-text">Atletico Madrid  | Third Kit </p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card shadow-sm">
-        <img src="/static/mn.jpg" class="d-block w-100" alt="...">
-
-        <div class="card-body">
-          <p class="card-text">Atletico Madrid  | Home kit</p>
-        </div>
-      </div>
-    </div>
-
+    {% endfor %}
   </div>
 </div>
+<div class="footer">
+        <p class="footer-text-left">
+            Real Madrid © 2024 All rights reserved
+        </p>
+        <ul class="footer-text-right">
+            <a class="fly" href="https://www.emirates.com/es/spanish/" style="text-decoration: none;"><li>Fly Emirates</li></a>
+            <a class="adid" href="https://www.adidas.co.uk/" style="text-decoration: none;"><li>Adidas</li></a>
+            <a class="yt" href="https://www.youtube.com/realmadrid" style="text-decoration: none;"><li>YouTube</li></a>
+        </ul>
+    </div>
+<style>
+  .footer-text{
+    color: gray;
+    font-size: 15px;
+    position: relative;
+    top: 20px;
+    left: 10px;
+}
+.footer-text.i{
+    padding-bottom:15px;
+}
+.ticket{
+    position: relative;
+    top: 20px;
+    left: 10px;
+}
+.footer{
+    height: 60px;
+    background-color: lightgray;
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-{% endblock body %}
+.footer-text-left{
+    font-size: 10px;
+    color:white;
+    font-weight: 400;
+    line-height: 20px;
+    display: contents;
+}
+.footer-text-right {
+    display: contents;
+}
+.fly{
+    font-size: 10px;
+    color: white;
+    font-weight: 400;
+    line-height: 20px;
+    list-style: none;
+    position: relative;
+    left: 120px;
+}
+.adid{
+    font-size: 10px;
+    color: white;
+    font-weight: 400;
+    line-height: 20px;
+    list-style: none;
+    position: relative;
+}
+.yt{
+    font-size: 10px;
+    color: white;
+    font-weight: 400;
+    line-height: 20px;
+    list-style: none;
+    position: relative;
+    right: 120px;
+}
+</style>
+{% endblock content %}
